# minishell

./: '  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  author  function(3).md  minishell
incs/: minishell.h  minishell.h.gch
incs/minishell/: defs.h  main.h  types.h  types_enum.h
libs/libft/: Makefile
libs/libft/incs/libft/: ft_chars.h  ft_fds.h  ft_lst.h  ft_nbrs.h  ft_printf.h  ft_strs.h
libs/libft/srcs/ft_chars/: ft_isblank.c  ft_islower.c
libs/libft/srcs/ft_printf/: ft_print_c.c  ft_print_nbr.c  ft_print_str.c  ft_printf.c
libs/libft/srcs/ft_strs/: ft_split.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strtok.c  ft_strtrim.c
man/: function(3).md
srcs/: ]  a.out  arg_utils.c  ascii_init.c  builtin.c  check_cmd.c  cmd_utils.c  compile.sh  dollar_utils.c  dollar_utils2.c  env_utils.c  error.c  exec_cmds.c  fd_utils.c  free.c  ft_env.c  ft_export.c  ft_unset.c  heredocing.c  launch.c  libft.sh  linked_env.c  lst_enviro.c  main.c  minishell  parse_quotes_args.c  parsing.c  path_utils.c  pathing.c  pipe.c  piping.c  prompt.c  quotes.c  quotes_utils.c  redirection.c  redirection_utils.c  signal_utils.c  str_utils.c  test  test.c  (+4 more)
srcs/init/: ascii_init.c  env_utils.c  init_shell.c
srcs/lexer/: expand.c  expand_tokens.c  expand_utils1.c  expand_utisl.c  filter.c  general_state.c  lex_scanner.c  other_states.c  quotes_utils.c  token_utils.c  tokenizing.c  wc_frags.c  wc_utils.c  wc_utils1.c  wildcard.c
srcs/quotes/: quotes.c
srcs/signals/: signals.c
srcs/test/: a.out  execute.c  pipe.c  test.c
(+1 files in other folders)
